<resources>
    <string name="app_name">aib_labswp_2017_ss_entnahmeapp</string>
    <string name="title_activity_login">Primerverwaltung</string>
    <string name="title_activity_labor">Labor</string>
    <string name="title_activity_primerlist">Liste</string>string>

    <!-- Strings related to login -->
    <string name="prompt_email">Benutzername</string>
    <string name="sucesslogin">Erfolgreich eingeloggt</string>
    <string name="failurelogin">Falscher Benutzername oder falsches Passwort</string>
    <color name="blue">#505fa3</color>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Login</string>
    <string name="spinner_prompt">Wählen Sie eine Ansicht</string>
    <string-array name="gui_array">
        <item>Bitte Ansicht wählen</item>
        <item>Labor Primer-Tracking</item>
        <item>Labor Letzte Roboterliste</item>
        <item>Lager Entnahme</item>
        <item>Lager Rückgabe</item>

    <!-- Strings related to taking of primers -->
    </string-array>
    <string name="bListeAnzeigen">Liste anzeigen</string>

    <string name="radioRoboter">Roboterliste</string>
    <string name="radioManuell">Manuelle Liste</string>
    <string name="radioExtra">Sonderliste</string>
    <string name="radioAll">Alle Listen</string>

    <string name="descriptionTake">Primer-Entnahme</string>

    <string name="tvPosition">Pos</string>
    <string name="tvPrimername">Primer</string>
    <string name="tvPimerKoordinate">Lagerkoordinate</string>
    <string name="tvDestination">Zielort</string>
    <string name="btnTakeOut">Entnehmen</string>
    <string name="btnLogout">Logout</string>
    <string name="tvPrimerEntnahme">Primer-Entnahme</string>
    <string name="tvLastProcessedList">Aktuelle Roboter-Liste</string>
    <string name="btnShowList">Liste anzeigen</string>
    <string name="btnLogoutLastSanger">Logout</string>
    <string name="btnShowListLastSanger">Liste anzeigen</string>
    <string name="tvdetails">Primer Details</string>
    <string name="tvPrimerName">Primername:</string>
    <string name="tvPrimerTubeID">Primertube-ID:</string>
    <string name="tvLOT">LOT:</string>
    <string name="tvManufacturer">Hersteller:</string>
    <string name="tvReasonForNewPrimer">Grund für neuen Primer auswählen</string>

    <string name="tvNote">Nachricht:</string>
    <string name="btnSubmit">Neuen Primer anfordern</string>
    <string name="radioempty">Primer leer</string>
    <string name="radiobroken">Primertube kaputt</string>
    <string name="radionotfound">Primer nicht auffindbar</string>
    <string name="radionoinfo">Anderer Grund</string>
    <string name="checkBoxNewPrimer">Neuen Primer anfordern</string>
    <string name="withdrawalMessage">Kein Primer mit dieser PrimerTubeID zu entnehmen</string>
    <string name="takenMessage">Primer wurde entnommen</string>
    <string name="sanger">S</string>
    <string name="manual">M</string>
    <string name="extra">E</string>
    <string name="all">A</string>
    <string name="btnclose">Fertig</string>

    <string name="tvCurrentLocation">Aktuelle Position:</string>
    <string name="tvNewPosition">Neue Position angeben:</string>
    <string name="btnNewPosition">Neue Position senden</string>

    <!-- Strings related only to tracking -->
    <string name="descriptionTracking">Primer-Tracking</string>
    <string name="hintSearchPrimer">Primername</string>
    <string name="headerPrimer">Primer</string>
    <string name="headerPrimerTube">PrimerTubeID</string>
    <string name="headerLOT">LOT#</string>
    <string name="headerLocation">Standort/Roboter</string>
    <string name="btnList">Gesamtliste erneuern</string>
    <string name="checkBoxAdvSearch">Erweiterte Suche</string>
    <string name="AdvSearchMessage">Suche mit Platzhalter aktiviert</string>
    <string name="newLocationMessage">Neuer Standort wurde gesetzt</string>
    <string name="replacementMessage">Primer wurde ersetzt</string>


    <!-- Strings related only to rueckgabe -->
    <string name="removeWarning">Hinweis</string>
    <string name="removeMessage">Diesen Primer bitte entsorgen!</string>

    <string name="btnconfirmwarning">OK</string>
    <string name="btnReturnPrimer">Primer zurücklegen</string>
    <string name="removalMessage">Primer wurde entfernt</string>
    <string name="intentTubeRemove">PRIMERTUBETOREMOVE</string>
    <string name="intentTubeRemoveAlt">TUBEREMOVED</string>
    <string name="intentUserRemove">USERREMOVE</string>
    <string name="toastReturnPrimer">Primer zurückgelegt</string>

    <!-- Strings related to most classes -->
    <string name="logoutMessage">Erfolgreich ausgeloggt</string>
    <string name="sucessloadlist">Liste erfolgreich geladen</string>
    <string name="restError">ResponseError</string>
    <string name="restFailure">Failure</string>
    <string name="intentNewTube">NEWTUBE</string>
    <string name="intentActualTube">ACTUALTUBE</string>
    <string name="intentPosition">POSITION</string>
    <string name="intentNewLocation">NEWLOCATION</string>
    <string name="intentTube">TUBE</string>
    <string name="intentUser">USER</string>
    <string name="replacementHintRequired">Grund zwingend nötig</string>
    <string name="replacementHintOptional">Grund optional</string>
    <string name="noReplacementMessage">Kein Ersatzprimer verfügbar</string>
    <string name="newListMessage">Die Liste kann nicht abgearbeitet werden. Bitte laden Sie eine neue Liste.</string>
    <string name="loadListMessage">Bitte laden Sie die Liste erneut.</string>
    <string name="btnOK">OK</string>
    <string name="intentBarcode">barcode</string>
    <string name="spinner_prompt_workspaces">Wählen Sie einen Workspace</string>
    <string-array name="workspace_array">
        <item>Neue Position wählen</item>
        <item>Robot 1</item>
        <item>Robot 2</item>
        <item>Workspace 1</item>
        <item>Workspace 2</item>
        <item>Workspace 3</item>
        <item>Workspace 4</item>
        <item>Workspace 5</item>
        <item>Workspace 6</item>
        <item>Workspace 7</item>
        <item>Workspace 8</item>
        <item>Workspace 9</item>
        <item>Workspace 10</item>
        <item>Workspace 11</item>
    </string-array>

</resources>
