<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:stretchColumns="*">

    <TableRow
            android:layout_width="match_parent"
            android:background="#c0c0c0" android:layout_height="wrap_content">
        <TextView
                android:layout_column="0"
                android:padding="10dp"
                android:layout_span="3"
                android:text="@string/headerPrimer"
                android:textStyle="bold"
                android:background="#c0c0c0"
                android:layout_width="wrap_content" android:layout_marginLeft="60dp"/>
        <TextView
                android:layout_column="1"
                android:padding="10dp"
                android:layout_span="2"
                android:text="@string/headerPrimerTube"
                android:textStyle="bold"
                android:background="#c0c0c0"
        />
        <TextView
                android:layout_column="2"
                android:padding="10dp"
                android:layout_span="2"
                android:text="@string/headerLOT"
                android:textStyle="bold"
                android:background="#c0c0c0"
                android:gravity="center" android:layout_marginRight="15dp"/>
        <TextView
                android:layout_column="3"
                android:padding="10dp"
                android:text="@string/headerLocation"
                android:layout_span="2"
                android:textStyle="bold"
                android:background="#c0c0c0"

        />
    </TableRow>
</TableLayout>