<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/colorPrimaryDark">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/removeWarning"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/removeWarning" android:layout_weight="1"
                    android:textSize="30sp" android:textColor="@android:color/white"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp" android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center_vertical|center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/removeMessage"
                android:textSize="18sp" android:textColor="@android:color/white"
                android:text="@string/removeMessage" android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center_horizontal"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/white"
                android:layout_marginTop="20dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"

    >
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/btnconfirmwarning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_confirmwarning"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp" style="@android:style/Widget.Button.Small"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>